--- a/package.json
+++ b/package.json
@@ -1,5 +1,27 @@
 {
   "name": "filevault-relay",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "sn-stylekit": "^1.1.1"
+  },
+  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/standardnotes/filevault-relay.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/standardnotes/filevault-relay/issues"
+  },
+  "homepage": "https://github.com/standardnotes/filevault-relay#readme"
 }
