--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "filevault-relay",
   "private": true,
   "dependencies": {
-    "sn-stylekit": "^1.1.1"
+    "sn-stylekit": "2.0.14"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
