Fix docker image name on prod

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -36,7 +36,7 @@ jobs:
       with:
         task-definition: task-definition.json
         container-name: filesafe-relay-prod
-        image: "standardnotes/web:${{ github.sha }}"
+        image: "standardnotes/filesafe-relay:${{ github.sha }}"
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
