--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,6 +15,8 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.6
+    - name: Install libcurl
+      run: sudo apt-get install libcurl4-openssl-dev
     - name: Copy default configuration
       run: cp .env.sample .env
     - name: Install dependencies
