feat: replace datadog with newrelic

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,12 @@
 RAILS_ENV=development
 HOST=http://localhost:3000
 
-# Datadog
-DATADOG_ENABLED=false
-
 RAILS_LOG_TO_STDOUT=false
 
 GOOGLE_CLIENT_SECRETS=
+
+# NewRelic (Optional)
+NEW_RELIC_ENABLED=false
+NEW_RELIC_THREAD_PROFILER_ENABLED=false
+NEW_RELIC_LICENSE_KEY=
+NEW_RELIC_APP_NAME=Filesafe Relay
