--- a/.env.sample
+++ b/.env.sample
@@ -9,4 +9,5 @@ GOOGLE_CLIENT_SECRETS=
 NEW_RELIC_ENABLED=false
 NEW_RELIC_THREAD_PROFILER_ENABLED=false
 NEW_RELIC_LICENSE_KEY=
-NEW_RELIC_APP_NAME=Filesafe Relay
+NEW_RELIC_APP_NAME="Filesafe Relay"
+NEW_RELIC_BROWSER_MONITORING_AUTO_INSTRUMENT=false
