--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -30,21 +30,47 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+    - uses: actions/checkout@v3
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-        name: standardnotes/filesafe-relay
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tags: "stable,${{ github.sha }}"
 
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v3
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@master
+      with:
+        platforms: all
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@master
+
+    - name: Publish Docker image
+      uses: docker/build-push-action@v4
+      with:
+        builder: ${{ steps.buildx.outputs.name }}
+        context: .
+        file: Dockerfile
+        platforms: linux/amd64
+        push: true
+        tags: |
+          standardnotes/filesafe-relay:latest
+          standardnotes/filesafe-relay:${{ github.sha }}
+          ${{ steps.login-ecr.outputs.registry }}/filesafe-relay:${{ github.sha }}
+          ${{ steps.login-ecr.outputs.registry }}/filesafe-relay:latest
 
     - name: Download task definition
       run: |
@@ -56,7 +82,7 @@ jobs:
       with:
         task-definition: task-definition.json
         container-name: filesafe-relay-prod
-        image: "standardnotes/filesafe-relay:${{ github.sha }}"
+        image: ${{ steps.login-ecr.outputs.registry }}/filesafe-relay:${{ github.sha }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
@@ -64,17 +90,4 @@ jobs:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: filesafe-relay-prod
         cluster: prod
-        wait-for-service-stability: false
-
-  notify_slack:
-    needs: deploy
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Notify slack
-      uses: pullreminders/slack-action@master
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      with:
-        args: '{ \"channel\": \"${{ secrets.SLACK_NOTIFICATION_CHANNEL }}\", \"blocks\": [{\"type\": \"section\", \"text\": {\"type\": \"mrkdwn\", \"text\": \"Successfully deployed <https://filesafe-relay-prod.standardnotes.org|[PROD] FileSafe Relay>\"}}, {\"type\": \"section\", \"text\": {\"type\": \"mrkdwn\", \"text\": \"Changes: <https://github.com/standardnotes/filesafe-relay/commit/${{ github.sha }}|${{ github.sha }}>\"}, \"accessory\": {\"type\": \"image\", \"image_url\": \"https://website-dev.standardnotes.org/assets/icon.png\", \"alt_text\": \"Standard Notes\"}}, { \"type\": \"section\", \"fields\": [{\"type\": \"mrkdwn\", \"text\": \"<https://github.com/standardnotes/filesafe-relay/actions/runs/${{ github.run_id }}|Build details>\"}]}]}'
+        wait-for-service-stability: true
